ide/installer: Support loading model descriptors from a local directory for testing
If the environment variable OMNETPP_IDE_INSTALL_MODELS_DESCRIPTORS_DIR
is set, the Install Simulation Models dialog loads descriptors from that
local directory instead of downloading them from the server. The
directory must contain a descriptors.txt file and the referenced XML
descriptor files.

This is useful for testing descriptor changes locally before publishing
them to the server. The env var is converted to a file:// URL, so the
existing download logic works unchanged.